# tracemin

./: .gitignore  BENCHMARK.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
results/: v0.1.0a1_bench.json
scripts/: check_banned_phrases.sh  check_numeric_markers.sh  verify_step.py
src/tracemin/: __init__.py  artifact.py  atoms.py  cache.py  cli.py  doctor.py  engine.py  oracle.py  replay.py  scrub.py  signature.py  stochastic.py
src/tracemin/adapters/: __init__.py  _render.py  claude.py  hf.py  openhands.py
src/tracemin/bench/: __init__.py  inject.py  metrics.py
tests/: test_adapters_hf.py  test_adapters_ingest.py  test_artifact_schema.py  test_atoms.py  test_bench.py  test_cli.py  test_doctor.py  test_engine.py  test_oracle.py  test_replay.py  test_scrub_leak.py  test_signature.py  test_stochastic.py
